--- a/backend/package.json
+++ b/backend/package.json
@@ -25,10 +25,19 @@
     "@types/jsonwebtoken": "^8.5.8",
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
+    "dotenv-safe": "^8.2.0",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0"
   },
-  "description": "Projeto Mãos que Conectam com a Segurança"
+  "description": "Projeto Mãos que Conectam com a Segurança",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/istdevsenai/marca_ambiental.git"
+  },
+  "bugs": {
+    "url": "https://github.com/istdevsenai/marca_ambiental/issues"
+  },
+  "homepage": "https://github.com/istdevsenai/marca_ambiental#readme"
 }
