--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc",
-    "start": "nodemon ./build/server.js",
+    "start": "ts-node-dev --exit-child --transpile-only --ignore-watch node_modules src/server.ts && nodemon ./build/server.js",
     "dev": "ts-node-dev --exit-child --transpile-only --ignore-watch node_modules src/server.ts"
   },
   "keywords": [],
@@ -15,8 +15,6 @@
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.6",
     "nodemon": "^2.0.19",
-    "prisma": "^4.1.0",
-    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
   "dependencies": {
@@ -24,12 +22,15 @@
     "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^8.5.8",
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "dotenv-safe": "^8.2.0",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
-    "md5": "^2.3.0"
+    "md5": "^2.3.0",
+    "prisma": "^4.1.1",
+    "ts-node-dev": "^2.0.0"
   },
   "description": "Projeto Mãos que Conectam com a Segurança",
   "repository": {
