--- a/.github/workflows/azure_marca-ambiental.yml
+++ b/.github/workflows/azure_marca-ambiental.yml
@@ -23,6 +23,7 @@ jobs:
 
       - name: npm install, build, and test
         run: |
+        cd runner/work/marca-deploy
           npm install
           npm run build --if-present
           npm run test --if-present
